--- a/views/create.ejs
+++ b/views/create.ejs
@@ -2,31 +2,30 @@
 
 <form action="submit-post" method="post">
   <section hidden name="hidden-info">
-    <% if (locals.postId) { %>
-      <input name="post-id" value= <%=postId%>>
+    <% if (locals.postData) { %>
+      <input name="postId" value= <%=postData.id%>>
     <%}%>
   </section>
   <div class="input-group p-5" style="height: 300px; width: 100%;">
     <div class="container">
       <div class="row">
         <span class="input-group-text col-auto">Post Title: </span>
-        <input class="form-control col" type="text" name="postTitle" placeholder="Great Title"  aria-label="With textarea"><%=locals.postTitle%></input>
+        <input class="form-control col" type="text" name="postTitle" placeholder="Great Title" aria-label="With textarea" value="<%=locals.postData ? locals.postData.title : ""%>"/>
       </div>
       <div class="row my-2">
-        <textarea type="text" name="postText" placeholder="Your fantastic post" class="form-control" aria-label="With textarea" style="height: 150px;"><%=locals.postText%></textarea>
+        <textarea type="text" name="postText" placeholder="Your fantastic post" class="form-control" aria-label="With textarea" style="height: 150px;"><%=locals.postData ? locals.postData.content : ""%></textarea>
       </div>
       <div class="row my-2">
         <button type="submit-post" class="btn btn-success col-auto me-2">
-          <% if (locals.isEdit) {%>
+          <% if (locals.isEditing) {%>
             Update post
           <%} else {%>
             Create Post
           <%}%>
         </button>
-        <button href="/" class="btn btn-danger col-auto">Abort</button>
+        <a href="/" class="btn btn-danger col-auto">Abort</a>
       </div>
     </div>
-
   </div>
 </form>
 
